src/deploy/cloudformation/network.json
{
  "AWSTemplateFormatVersion" : "2010-09-09",
  "Resources": {
    "VPC01": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/28",
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-charprop"
          }
        ]
      }
    },
    "SUBNET01": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC01"
        },
        "CidrBlock": "10.0.0.0/28",
        "Tags": [
          {
            "Key": "Name",
            "Value": "subnet-charprop-public"
          }
        ]
      }
    },
    "GATEWAY01": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "igw-charprop"
          }
        ]
      }
    },
    "GATEWAYATTACHMENT01": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "GATEWAY01"
        },
        "VpcId": {
          "Ref": "VPC01"
        }
      }
    },
    "ROUTETABLE01": {
      "Type": "AWS::EC2::RouteTable",
      "DependsOn": "VPC01",
      "Properties": {
        "VpcId": {
          "Ref": "VPC01"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "rtb-charprop"
          }
        ]
      }
    },
    "ROUTE01": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "GATEWAY01",
      "Properties": {
        "RouteTableId": {
          "Ref": "ROUTETABLE01"
        },
        "GatewayId": {
          "Ref": "GATEWAY01"
        },
        "DestinationCidrBlock": "0.0.0.0/0"
      }
    },
    "SUBNETATTACHMENT01": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "ROUTETABLE01"
        },
        "SubnetId": {
          "Ref": "SUBNET01"
        }
      }
    },
    "SECURITYGROUPSSH": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable SSH access to port 22",
        "VpcId": {
          "Ref": "VPC01"
        },
        "SecurityGroupIngress": [
          {
            "CidrIp" : "0.0.0.0/0",
            "IpProtocol" : "tcp",
            "ToPort" : 22,
            "FromPort": 22
          }
        ]
      }
    },
    "SECURITYGROUPAPPSERVER": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable HTTP/S access on port 80/443",
        "VpcId": {
          "Ref": "VPC01"
        },
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "ToPort":80,
            "FromPort": 80
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "ToPort":443,
            "FromPort": 443
          }
        ]
      }
    },
    "SERVER01": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-d2c924b2",
        "SecurityGroupIds": [ {"Ref": "SECURITYGROUPAPPSERVER"}, {"Ref": "SECURITYGROUPSSH"}],
        "InstanceType": "t2.micro",
        "KeyName": "charprop",
        "SubnetId": {
          "Ref": "SUBNET01"
        },
        "UserData": {

        }
      }
    }
  }
}
